k8s/apps/default/wrtag/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrtag
spec:
  selector:
    app: wrtag
  ports:
    - port: 80
      targetPort: web
      protocol: TCP
